feat: configure pwa

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="og:title" content="Imágenes del mundo | Alegra" />
     <meta name="og:description" content="Imágenes del mundo | Alegra, ¡una
     carrera para encontrar las imágenes más interesantes de la web!" />
+    <link rel="apple-touch-icon" href="/logo.png" sizes="180x180">
     <meta name="og:image" content="/logo.png" />
     <meta name="og:url" content="https://alegra.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
